# Fun-ASR-GGUF

./: 01-Export-Encoder-Adaptor-CTC.py  01_Export_ONNX.py  02-Export-Decoder-GGUF.py  02-Quantize-ONNX.py  03-Inference.py  03_Inference.py  04-Inference.py  README.md  asr_e2e.py  pyproject.toml
fun_asr_gguf/: __init__.py  asr_engine.py  export_torch_model.py  llama.py  nano_dataclass.py  nano_llama.py  nano_onnx.py
fun_asr_gguf/core/: decoder.py  model_manager.py  orchestrator.py
lib/: nano_llama.py
