[project]
name = "funasr-nano-onnx-gguf"
authors = [{ name = "HaujetZhao" }]
version = "0.0.1"
description = "本项目提供了一套完整的脚本，用于将 FunASR-Nano 模型转换为 GGUF 格式，并实现纯本地推理（支持 ONNX Encoder + GGUF Decoder）。"
readme = "README.md"
requires-python = "==3.9.*"
dependencies = [
    "funasr>=1.3.0",
    "gguf>=0.17.1",
    "llama-cpp-python>=0.3.16",
    "numpy>=2.0.2",
    "onnx>=1.19.1",
    "pydub>=0.25.1",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "transformers>=4.57.6",
]

[dependency-groups]
cpu = ["onnxruntime>=1.19.2"]
gpu = ["onnxruntime-gpu>=1.19.2"]
notebook = ["ipykernel>=6.31.0", "ipynb>=0.5.1", "pip>=25.3"]

[[tool.uv.index]]
url = "https://mirrors.ustc.edu.cn/pypi/simple"
default = true

[project.urls]
Repository = "https://github.com/HaujetZhao/FunASR-nano-onnx-gguf"
Issues = "https://github.com/HaujetZhao/FunASR-nano-onnx-gguf/issues"
